<?xml version="1.0" encoding="utf-8"?><LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:tools="http://schemas.android.com/tools"    android:layout_width="match_parent"    android:layout_height="match_parent"    android:background="#F6F7F9"    android:orientation="vertical"    tools:context="com.example.joes.electroneumwallet.MainActivity">    <!--     Connection: OK     Display: Top     -->    <LinearLayout        android:visibility="gone"        android:id="@+id/ll_working_parent_top"        style="@style/LayoutTemplate"        android:background="@color/colorPrimary"        android:orientation="vertical">        <TextView            android:id="@+id/text_working_child_unpaid_balance"            style="@style/CenterSmallText"            android:layout_marginTop="24dp"            android:text="@string/text_unpaid_balance" />        <TextView            android:id="@+id/tv_working_child_balance_update_time"            style="@style/CenterSmallText"            android:textStyle="bold"            tools:text="5 Minutes Ago" />        <TextView            android:id="@+id/tv_working_child_unpaid_balance_etn"            style="@style/CenterMediumText"            android:layout_marginTop="16dp"            android:textStyle="bold"            tools:text="25.2 ETN" />        <TextView            android:id="@+id/tv_working_child_unpaid_balance_usd"            style="@style/CenterSmallText"            tools:text="0.000025 USD" />        <TextView            android:id="@+id/tv_working_child_unpaid_balance_btc"            style="@style/CenterSmallText"            android:layout_marginBottom="12dp"            tools:text="0.0000023 BTC" />    </LinearLayout>    <!--     Connection: OK     Display: Hash Middle     -->    <LinearLayout        android:visibility="gone"        android:id="@+id/ll_working_parent_mid"        style="@style/LayoutTemplate"        android:background="@android:color/white"        android:orientation="vertical">        <TextView            style="@style/MarginSmallText"            android:text="@string/current_hash_speed"            android:textColor="@color/lightBlueText" />        <View            style="@style/LineSeparator"            android:background="@color/lightGrayLine" />        <LinearLayout style="@style/LayoutTemplate">            <TextView                android:id="@+id/tv_working_child_hash_speed"                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginTop="0dp"                android:textSize="28sp"                tools:text="100.00" />            <TextView                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginLeft="5dp"                android:layout_marginStart="5dp"                android:layout_marginTop="0dp"                android:text="@string/hash_sec"                android:textColor="@color/lightBlueText" />        </LinearLayout>    </LinearLayout>    <!--     Connection: OK     Display: Bottom     -->    <LinearLayout        android:visibility="gone"        android:id="@+id/ll_working_parent_bot"        style="@style/LayoutTemplate"        android:layout_marginTop="36dp"        android:background="@android:color/white"        android:orientation="vertical">        <TextView            style="@style/MarginSmallText"            android:text="@string/current_electroneum_price"            android:textColor="@color/lightBlueText" />        <View style="@style/LineSeparator" />        <LinearLayout            style="@style/LayoutTemplate"            android:orientation="horizontal">            <TextView                android:id="@+id/tv_working_child_price_in_usd"                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginTop="0dp"                tools:text="0.003235" />            <TextView                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginLeft="5dp"                android:layout_marginStart="5dp"                android:layout_marginTop="0dp"                android:text="@string/usd"                android:textColor="@color/lightBlueText" />        </LinearLayout>        <View style="@style/LineSeparator" />        <LinearLayout            style="@style/LayoutTemplate"            android:orientation="horizontal">            <TextView                android:id="@+id/tv_working_child_price_in_btc"                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginTop="0dp"                tools:text="0.0000663" />            <TextView                style="@style/MarginMediumText"                android:layout_width="wrap_content"                android:layout_marginLeft="5dp"                android:layout_marginStart="5dp"                android:layout_marginTop="0dp"                android:text="@string/btc"                android:textColor="@color/lightBlueText" />        </LinearLayout>        <TextView            style="@style/MarginSmallText"            android:text="@string/percentage_changes"            android:textColor="@color/lightBlueText" />        <View style="@style/LineSeparator" />        <TextView            android:id="@+id/tv_working_child_percentage_changes"            style="@style/MarginMediumText"            android:layout_marginBottom="8dp"            android:layout_marginTop="0dp"            android:textColor="@color/lightBlueText"            tools:text="0.25" />    </LinearLayout>    <!--     Connection: OK     Wallet: Invalid     Display: Whole     -->    <LinearLayout        android:visibility="gone"        style="@style/LayoutTemplate"        android:layout_height="match_parent"        android:orientation="vertical">        <RelativeLayout            style="@style/LayoutTemplate"            android:layout_height="0dp"            android:layout_weight="45"            android:background="@android:color/white">            <TextView                android:id="@+id/text_Invalid_Wallet_child_Header"                style="@style/CenterMediumText"                android:layout_centerInParent="true"                android:text="@string/invalid_wallet_header"                android:textColor="#6B6B6B"                android:textSize="18sp"                android:textStyle="bold" />            <TextView                android:id="@+id/text_Invalid_Wallet_child_Detail"                style="@style/CenterSmallText"                android:layout_below="@id/text_Invalid_Wallet_child_Header"                android:text="@string/invalid_wallet_detail"                android:textColor="#6B6B6B" />            <TextView                style="@style/ButtonText"                android:layout_width="wrap_content"                android:layout_below="@id/text_Invalid_Wallet_child_Detail"                android:text="@string/open_settings"                android:textColor="@color/lightBlueText" />        </RelativeLayout>        <RelativeLayout            style="@style/LayoutTemplate"            android:layout_height="0dp"            android:layout_weight="25"            android:background="@android:color/white">        </RelativeLayout>    </LinearLayout>    <!--     Connection: OK     Wallet: Pending     Status: Pending     Display: Whole     -->    <LinearLayout        android:visibility="gone"        android:id="@+id/ll_Pending_Request_parent"        style="@style/LayoutTemplate"        android:layout_height="match_parent"        android:orientation="vertical">        <RelativeLayout            style="@style/LayoutTemplate"            android:layout_weight="35"            android:background="@android:color/white">            <ProgressBar                android:id="@+id/pb_Pending_Request_child_loading"                android:layout_width="42dp"                android:layout_height="42dp"                android:layout_centerInParent="true" />            <TextView                style="@style/CenterSmallText"                android:layout_below="@id/pb_Pending_Request_child_loading"                android:layout_marginTop="5dp"                android:text="Please wait while we updating the result."                android:textColor="#6B6B6B"                />        </RelativeLayout>        <LinearLayout            style="@style/LayoutTemplate"            android:layout_weight="25"            android:background="@android:color/white">        </LinearLayout>    </LinearLayout>    <!--     Connection: NO     Wallet: Dont Matter cause no internet to check     Status: Pending     Display: Whole     -->    <LinearLayout        android:id="@+id/ll_No_Internet_parent"        style="@style/LayoutTemplate"        android:layout_height="match_parent"        android:orientation="vertical">        <RelativeLayout            style="@style/LayoutTemplate"            android:layout_weight="35"            android:background="@android:color/white">            <TextView                android:id="@+id/tv_No_Internet_child_Header"                style="@style/CenterMediumText"                android:layout_centerInParent="true"                android:text="There is no Internet Connection"                android:textColor="#6B6B6B"                android:textSize="18sp"                android:textStyle="bold" />            <TextView                style="@style/CenterSmallText"                android:layout_below="@id/tv_No_Internet_child_Header"                android:layout_marginTop="5dp"                android:text="Please check your Wi-Fi / Mobile Data."                android:textColor="#BF2424" />        </RelativeLayout>        <LinearLayout            style="@style/LayoutTemplate"            android:layout_weight="25"            android:background="@android:color/white">        </LinearLayout>    </LinearLayout></LinearLayout>